Bump to latest wiki-java and JDK 21